# wishper

./: .gitignore  README.md  config.toml  pyproject.toml
src/wishper/: cleaner.py  commands.py  config.py  context.py  injector.py  main.py  recorder.py  sounds.py  streaming.py  transcriber.py  vad.py
tests/: test_commands.py  test_config.py  test_context.py  test_injector.py  test_recorder.py  test_sounds.py
